feat: implement user retrieval use cases and update UserRepository to support filtering by role and status